chore: cleaning up streams and logic

--- a/HackRFDotnet/HackRFDotnet.csproj
+++ b/HackRFDotnet/HackRFDotnet.csproj
@@ -24,4 +24,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ManagedApi\Streams\SignalStreams\Digital\" />
+  </ItemGroup>
+
 </Project>
